--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,6 +9,7 @@ branches:
 build: off  # будем использовать свой скрипт сборки
 
 install:
+  - chmod +x gradlew
   # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
   - java -jar ./artifacts/app-mbank.jar &
 
